--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react 学习",
   "main": "index.js",
   "scripts": {
-    "start":"webpack-dev-server --inline --open",
+    "start":"webpack-dev-server --inline --open --env dev",
     "build": "webpack -p"
   },
   "keywords": [
