--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react 学习",
   "main": "index.js",
   "scripts": {
-    "start":"webpack-dev-server --inline --open --env dev",
+    "start": "webpack-dev-server --inline --open --env dev",
     "build": "webpack -p"
   },
   "keywords": [
@@ -13,6 +13,7 @@
   "author": "lc",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -23,8 +24,11 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "html-webpack-plugin": "^2.29.0",
+    "redux-saga": "^0.15.4",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   }
