--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react 学习",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --open --env dev",
+    "start": "webpack-dev-server --inline --hot --open --env dev",
     "build": "webpack -p"
   },
   "keywords": [
@@ -19,8 +19,8 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
-    "react-router-redux": "^4.0.8",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "redux-saga": "^0.15.4"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -29,7 +29,6 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "html-webpack-plugin": "^2.29.0",
-    "redux-saga": "^0.15.4",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   }
